changed the ui and funciton

--- a/index.html
+++ b/index.html
@@ -1,60 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>VLink | Secure Chat</title>
-    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/idb@8/build/umd.js"></script>
-    
-    <meta name="theme-color" content="#075e54">
-    <link rel="apple-touch-icon" href="icons/icon-192.png">
-    <link rel="stylesheet" href="style.css">
-    <link rel="manifest" href="manifest.json">
-</head>
 <body>
+    <div id="app-wrapper" style="display: flex; height: 100vh; overflow: hidden;">
+        <nav class="sidebar" style="width: 70px; background: #202225; display: flex; flex-direction: column; align-items: center; padding-top: 15px; gap: 12px;">
+            <div class="server-icon active" style="width: 48px; height: 48px; background: #5865f2; border-radius: 50%; display: flex; align-items: center; justify-content: center; color: white; cursor: pointer; font-weight: bold;">VL</div>
+            <div id="friends-list" style="display: flex; flex-direction: column; gap: 8px;">
+                </div>
+            <button id="add-friend-btn" style="width: 48px; height: 48px; background: #3ba55d; border: none; border-radius: 50%; color: white; font-size: 24px; cursor: pointer;">+</button>
+        </nav>
 
-    <main id="chat-app">
-        <header class="chat-header">
-            <div class="header-main">
-                <h2 style="margin:0; font-size: 18px;">VLink Messenger</h2>
-                <div id="status" style="font-size: 10px; opacity: 0.8;">● Secure Offline Mode</div>
+        <main id="chat-app" style="flex: 1; display: flex; flex-direction: column; background: #36393f;">
+            <header class="chat-header">
+                <div class="header-main">
+                    <h2 id="chat-target" style="margin:0; font-size: 18px;">Select a Friend</h2>
+                    <div id="status" style="font-size: 10px; opacity: 0.8;">● Secure Offline Protocol</div>
+                </div>
+                <div class="header-actions">
+                    <input type="password" id="secret-key" placeholder="Passcode">
+                    <button id="show-qr-btn" class="icon-btn">QR</button>
+                </div>
+            </header>
+
+            <div id="qrcode" style="display:none; text-align: center; background: white; padding: 20px;"></div>
+
+            <div id="chat-thread" style="flex: 1; overflow-y: auto; padding: 20px;">
+                <div class="message system">Click "+" to add a friend's phone number. Use the same passcode to chat.</div>
             </div>
-            <div class="header-actions">
-                <input type="password" id="secret-key" placeholder="Passcode">
-                <button id="show-qr-btn" class="icon-btn">QR</button>
-            </div>
-        </header>
 
-        <div id="qrcode" style="display:none; text-align: center; background: white; padding: 20px; border-bottom: 1px solid #ddd;"></div>
+            <canvas id="thumbnail-canvas" style="display: none;"></canvas>
 
-        <div id="chat-thread">
-            <div class="message system">Welcome to VLink Protocol. Set your passcode and share your app via QR to begin.</div>
-            </div>
-
-        <canvas id="thumbnail-canvas" style="display: none;"></canvas>
-
-        <footer class="chat-input-area">
-            <div id="packet-counter" class="hidden">0/0</div>
-
-            <label for="file-input" class="attach-btn">
-                <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor"><path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/></svg>
-            </label>
-            <input type="file" id="file-input" accept="image/*" hidden>
-
-            <textarea id="import-input" placeholder="Paste packet or type..."></textarea>
-
-            <button id="chunk-btn" class="send-btn">
-                <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor"><path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"/></svg>
-            </button>
-        </footer>
-    </main>
-
-    <div style="text-align: center; padding: 10px; background: #e5ddd5;">
-        <button id="reset-receiver" style="background:none; border:none; color:#666; font-size:10px; text-decoration: underline;">Clear Chat History</button>
+            <footer class="chat-input-area">
+                <div id="packet-counter" class="hidden">0/0</div>
+                <label for="file-input" class="attach-btn">
+                    <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor"><path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/></svg>
+                </label>
+                <input type="file" id="file-input" accept="image/*" hidden>
+                <textarea id="import-input" placeholder="Message or paste packet..."></textarea>
+                <button id="chunk-btn" class="send-btn">
+                    <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor"><path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"/></svg>
+                </button>
+            </footer>
+        </main>
     </div>
-
     <script src="app.js"></script>
 </body>
-</html>
