--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
 
             <footer class="chat-input-area">
                 <div id="packet-counter" class="hidden">0/0</div>
-                <label for="file-input" class="attach-btn">
-                    <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor"><path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/></svg>
-                </label>
+             <label for="file-input" class="attach-btn" style="cursor: pointer;">
+    <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor"><path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/></svg>
+</label>
+<input type="file" id="file-input" accept="image/*" style="display: none;">
                 <input type="file" id="file-input" accept="image/*" hidden>
                 <textarea id="import-input" placeholder="Message or paste packet..."></textarea>
                 <button id="chunk-btn" class="send-btn">
