--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>VLink | Secure Chat</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
@@ -13,7 +15,7 @@
         <nav class="sidebar">
             <div class="server-icon active">VL</div>
             <div id="friends-list"></div>
-            <button id="add-friend-btn">+</button>
+            <button id="add-friend-btn" title="Add Friend">+</button>
         </nav>
 
         <main id="chat-app">
@@ -28,7 +30,7 @@
                 </div>
             </header>
 
-            <div id="qrcode" style="display:none;"></div>
+            <div id="qrcode" style="display:none; padding: 20px; background: white; text-align: center;"></div>
 
             <div id="chat-thread">
                 <div class="message system">Click "+" to add a friend's phone number. Use the same passcode to chat.</div>
@@ -38,21 +40,45 @@
 
             <footer class="chat-input-area">
                 <div id="packet-counter" class="hidden">0/0</div>
-             <label for="file-input" class="attach-btn" style="cursor: pointer;">
-    <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor"><path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/></svg>
-</label>
-<input type="file" id="file-input" accept="image/*" style="display: none;">
-                <input type="file" id="file-input" accept="image/*" hidden>
+                
+                <label for="file-input" class="attach-btn" style="cursor: pointer;">
+                    <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor"><path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/></svg>
+                </label>
+                <input type="file" id="file-input" accept="image/*" style="display: none;">
+
                 <textarea id="import-input" placeholder="Message or paste packet..."></textarea>
+                
                 <button id="chunk-btn" class="send-btn">
                     <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor"><path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"/></svg>
                 </button>
             </footer>
         </main>
     </div>
-    <div class="util-bar">
+
+    <div class="util-bar" style="text-align: center; padding: 10px;">
         <button id="reset-receiver">Clear History</button>
     </div>
+
+    <div id="image-viewer" class="modal" style="display: none;">
+        <span class="close-viewer">&times;</span>
+        <div class="modal-content-wrapper">
+            <img class="modal-content" id="full-image">
+        </div>
+        <div class="viewer-controls">
+            <button onclick="adjustZoom(0.2)">Zoom In +</button>
+            <button onclick="adjustZoom(-0.2)">Zoom Out -</button>
+            <button onclick="resetZoom()">Reset</button>
+            <button id="download-btn" style="background: #2ecc71;">Save to Gallery</button>
+        </div>
+    </div>
+
     <script src="app.js"></script>
+    <script>
+        // Register Service Worker for Offline Use
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('./sw.js')
+                .then(() => console.log("VLink: Offline Mode Active"));
+        }
+    </script>
 </body>
 </html>
